
    HADOOP-12362. Set hadoop.tmp.dir and hadoop.log.dir in pom.
    (Charlie Helin via wang)

    HADOOP-10318. Incorrect reference to nodeFile in RumenToSLSConverter
    error message. (Wei Yan via ozawa)

    HADOOP-12388. Fix components' version information in the web page
    'About the Cluster'. (Jun Gong via zxu)

    HADOOP-12407. Test failing: hadoop.ipc.TestSaslRPC. (stevel)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12186. ActiveStandbyElector shouldn't call monitorLockNodeAsync
    multiple times (zhihai xu via vinayakumarb)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HDFS-8767. RawLocalFileSystem.listStatus() returns null for UNIX pipefile.
    (kanaka kumar avvaru via wheat9)

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-12061. Incorrect command in single cluster setup document.
    (Kengo Seki via aajisaka)

    HADOOP-12359. hadoop fs -getmerge doc is wrong.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-10365. BufferedOutputStream in FileUtil#unpackEntries() should be
    closed in finally block. (Kiran Kumar M R and Sanghyun Yun via ozawa)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12103. Small refactoring of DelegationTokenAuthenticationFilter to
    allow code sharing. (Yongjun Zhang)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)
